@@ -27,6 +27,8 @@ FIX: Issue-100: UserSetting.CurrentPageID now has foreign key to Page object
 FIX: Issue 99:	Unique page titles create UI issues
 FIX: Issue 98:	Lock widget instance > widget header is not fully disabled
 FIX: Issue 97:	Add tab, add widget: error 'sequence contains no elements'
+FIX: Issue 96:	Update widget: not all properties are updated
+FIX: Issue 95:	Delete widget: Reference constraint errors when widget is used in roles, or added to portal
 
 Version 2.6.1
 ==============
